<resources>
    <string name="app_name">Book Catalog</string>
    <string name="book_title_label">TITLE</string>
    <string name="book_detail_label">Details</string>
    <string name="new_book">New Book</string>
    <string name="close">Close</string>
    <string name="book_writer_label">WRITER</string>
    <string name="book_notes_label">NOTES</string>
    <string name="book_date_of_buy_label">DATE OF BUY</string>
    <string name="book_writer">WRITER</string>
    <string name="search">Search</string>
    <string name="search_with_isbn">SEARCH WITH ISBN</string>
    <string name="choose_search_type">CHOOSE A SEARCH METHOD:</string>
    <string name="search_with_title">SEARCH WITH TITLE</string>
    <string name="search_with_writer">SEARCH WITH WRITER</string>
    <string name="isbn_number">ISBN NUMBER:</string>
    <string name="enter_isbn_number">Enter an isbn number</string>
    <string name="isbn_warning">ISBN value can not be empty!!</string>
    <string name="get_ISBN">GET BOOK INFO FROM ISBN</string>
    <string name="book_isbn_number">Book ISBN Number</string>
    <string name="isbn_label">Found ISBN:</string>
    <string name="delete_menu_item">Delete</string>
    <string name="save">Save</string>
    <string name="isbn">ISBN</string>
    <string name="get_book_info">GET BOOK INFO</string>
    <string name="isbn_error">ISBN Number was not found!!!</string>
    <string name="needISBN">Need a valid ISBN Number to take book Info. Please check ISBN Number on book and take its photo!!!</string>
    <string name="isbn_already_added">ISBN has been added already!!</string>
    <string name="isbn_response_error">Book was not found in Book  Server. Check ISBN and try again!</string>
    <string name="book_detail">Book Detail</string>
    <string name="book_isbn">ISBN</string>
    <string name="book_catalog">Book Catalog</string>
    <string name="book_search">Search</string>
    <string name="writer_name">WRITER NAME:</string>
    <string name="get_search">SEARCH</string>
    <string name="writer_not_found">Writer was not found on catalog!</string>
    <string name="writer_warning">Writer name can not be empty!</string>
    <string name="title_warning">Title name can not be empty!</string>
    <string name="isbn_search">Search With ISBN</string>
    <string name="title_search">Search with Title</string>
    <string name="writer_search">Search With Writer</string>
    <string name="fiter_off">Filter Off</string>
    <string name="book_not_found">Book was not found in the catalog!</string>
    <string name="isbn_not_found">Isbn was not found on catalog.</string>
    <string name="reorder">Reorder</string>
    <string name="order_by_date_of_buy">Date Of Buy</string>
    <string name="date_of_buy">Date of Buy</string>
    <string name="by_date_of_buy">By Date Of Buy</string>
    <string name="by_title">By Title</string>
    <string name="by_writer">By Writer</string>
    <string name="title_name">TITLE NAME(Full Or Part)</string>
    <string name="waitForLoading">Please wait for loading.</string>
    <string name="book_date_of_read_label">DATE OF READ</string>
    <string name="home_page">Home Page</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_book_with_isbn_picture">ADD A Book WITH ISBN PICTURE</string>
    <string name="add_book_manually">ADD A BOOK MANUALLY</string>
    <string name="book_adding_type_question">How will you add a book to the your book list?</string>
    <string name="add_new_book">New Book</string>
    <string name="take_picture_of_isbn">Take a picture of your book\'s ISBN Number, please!</string>
    <string name="isbn_number_hint">ISBN Number is on the back of your book or the second page of the book. It starts with ISBN always.</string>
</resources>