<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/new_book"
        android:icon="@drawable/ic_menu_add"
        android:title ="@string/new_book"
        app:showAsAction="ifRoom|withText"/>
    <item
        android:id="@+id/search_book"
        android:icon ="@drawable/ic_baseline_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|withText"
        />
    <item
        android:id="@+id/reorder_book_list"
        android:icon="@drawable/ic_menu_reorder"
        android:title="@string/reorder"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item
                android:id="@+id/date_of_buy"
                android:title="@string/by_date_of_buy"
                app:showAsAction="ifRoom|withText"/>
            <item
                android:id="@+id/title"
                android:title="@string/by_title"
                app:showAsAction="ifRoom|withText"/>
            <item
                android:id="@+id/writer"
                android:title="@string/by_writer"
                app:showAsAction="ifRoom|withText"/>
        </menu>
    </item>
</menu>